# RigotekWebPanel

./: .gitignore  README.md  README.zh-CN.md
devtools/: README.md  README.zh-CN.md  win-cleanup.ps1  win-disable-autostart.ps1  win-enable-autostart.ps1  win-setup.ps1
rwp_backend/: Cargo.toml
rwp_backend/config/: config.toml
rwp_backend/src/: config.rs  db.rs  main.rs
rwp_frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
rwp_frontend/public/errors/: noscript.html
rwp_frontend/public/styles/: base.css  status-page.css
rwp_frontend/rigotek-web-ui/icons/: AlertCircle.tsx  LoadingLoop.tsx
rwp_frontend/rwp_wasm/: Cargo.toml
rwp_frontend/src/: App.tsx  authGate.tsx  bootstrap.tsx  ensure-logged-in.tsx  main.tsx
rwp_frontend/src/components/: index.ts
rwp_frontend/src/context/: index.ts
rwp_frontend/src/core/: db.ts  wasm.ts
rwp_frontend/src/env/: index.ts
rwp_frontend/src/i18n/: index.ts
rwp_frontend/src/pages/: Boot.tsx  Login.tsx  status-page.tsx
rwp_frontend/src/prefs/: index.ts
rwp_frontend/src/runtime/: boot-controller.tsx  db.ts  env.ts  wasm.ts
rwp_frontend/src/security/: auth.ts  session.ts
rwp_frontend/src/style/: loader.ts  theme.ts
rwp_frontend/src/styles/: base.css
rwp_frontend/src/utils/: assets.ts  browser-checker.ts  browser-compat.ts  crypto.ts  dev-tools.ts  json.ts  resource-loader.ts  storage.ts  style.ts
rwp_frontend/wasm/: Cargo.toml
rwp_frontend/wasm/rwp_engine/: Cargo.toml  README.md
rwp_frontend/wasm/wasm_feature_check/: Cargo.toml  README.zh-CN.md
(+12 files in other folders)
