[package]
name = "rwp_backend"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", default-features = false, features = ["http1", "json", "tokio"] }
redb = { version = "3.0.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "net", "macros"] }
toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }
